--- a/trabajo.Rmd
+++ b/trabajo.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Librerias utilizadas
 
 ```{r}
+#install.packages("patchwork")
 library("readxl")
 library("plm")
 library("forecast")
@@ -36,15 +37,15 @@ convertir_a_fecha <- function(trimestre) {
 }
 ```
 
-# Trabajo Académico
-
-## Introducción
+# Introducción
 
 Hoy en día la accesibilidad a la vivienda es un problema presente en nuestra sociedad. Nosotros vamos a intentar analizarlo desde el punto de vista del precio de la vivienda.
 
-## Pregunta
+## Preguntas
 
-¿Como se comporta el precio de la vivienda? ¿Como se relaciona el precio de la vivienda con el IPC, las personas activas y el coste salarial?
+¿Como se comporta el precio de la vivienda? ¿Como se relaciona el precio de la vivienda con el IPC, las personas activas y el coste salarial? ¿Cual va a ser el precio de la vivienda el trimestre que viene y el siguiente?
+
+# Análisis de datos de panel
 
 ## Descripción de los datos
 
@@ -204,10 +205,9 @@ library(DT)
 library(plotly)
 
 # Reordenar las CCAA basándose en la media del precio de la vivienda
-tmp <- ipc_por_CCAA %>%
-  mutate(CCAA = fct_reorder(CCAA, Precio_vivienda, .fun = mean, .desc=TRUE))
-
-tmp <- tmp %>%
+tmp <- data %>%
+  mutate(Periodo = as_datetime(sapply(Periodo, convertir_a_fecha))) %>%
+  mutate(CCAA = fct_reorder(CCAA, Precio_vivienda, .fun = mean, .desc=TRUE))%>%
     mutate(name2=CCAA)
 
 p = tmp %>%
@@ -309,13 +309,13 @@ El coeficiente asociado al IPC es 4.0642. Es estadísticamente significativo (p-
 
 El coeficiente asociado al "Coste_salarial_total" es -0.013654. Es estadísticamente significativo (p-value \< 0.001), y negativo. Cada unidad de aumento en el coste salarial total se asocia con una disminución de 0.013654 en el precio de la vivienda.
 
-El valor de chi-cuadrado es 430.173 con un p-value muy pequeño (\< 2.22e-16). Esto sugiere que al menos una de las variables independientes es significativa en la explicación de la variabilidad en el precio de la vivienda.
+El valor de chi-cuadrado es 430.173 con un p-value muy pequeño (\< 2.22e^-16^). Esto sugiere que al menos una de las variables independientes es significativa en la explicación de la variabilidad en el precio de la vivienda.
 
 La proporción de error idiosincrático es del 14%, mientras que la individual del 86%. La proporción del 14.4% para el efecto idiosincrático significa que una parte relativamente pequeña de la variabilidad total en el precio de la vivienda se debe a factores específicos de cada observación que no están explicados por las variables incluidas en tu modelo. Por otro lado, la proporción del 85.6% para el efecto individual significa que la mayoría de la variabilidad total en el precio de la vivienda se debe a diferencias sistemáticas entre las entidades (individuos) que no están capturadas por las variables incluidas en el modelo.
 
 El modelo de efectos aleatorios tiene en cuenta la variabilidad no observada específica a cada entidad (efecto individual) y la variabilidad no observada específica a cada observación (efecto idiosincrático). Los resultados sugieren que una parte significativa de la variabilidad en el precio de la vivienda se debe a efectos individuales, y las variables IPC y Coste Salarial Total son significativas en la predicción del precio de la vivienda. La variable Personas Activas no parece ser significativa en este modelo.
 
-### Conclusiones (Elección del modelo)
+## Elección del modelo
 
 Desde el punto de vista teórico, entre un modelo de pool de datos y un modelo de efectos fijos individuales eligiremos el modelo de efectos fijos individuales porque existen diferencias en el precio de la vivienda en cada CCAA. No es lo mismo el precio de la vivienda en Madrid que en Castilla-La-Mancha o Extremadura.
 
@@ -345,7 +345,9 @@ Se puede concluir, que el modelo que mejor explica el precio de la vivienda es e
 
 # Series temporales
 
-En esta segunda parte del estudio, nos enfocamos en el análisis del precio de la vivienda en la Comunidad Valenciana como una serie temporal, abarcando el período desde 2007 hasta la actualidad. Este período es especialmente significativo, ya que incluye tanto el impacto de la crisis financiera global de 2008 como las fluctuaciones económicas subsiguientes, incluyendo la reciente pandemia de COVID-19. Durante el análisis vamos a descubrir la naturaleza de la serie y vamos a tratar de diseñar un modelo econométrico que prediga el precio de la vivienda. Más concretamente, aplicaremos los análisis de series temporales aprendidos durante el curso y alguno extra para conseguir un modelo de predicción lo más exacto posible.
+En esta segunda parte del estudio, nos enfocamos en el análisis del precio de la vivienda en la Comunidad Valenciana como una serie temporal. Abarcamos desde el 2007 hasta la actualidad (tercer trimestre de 2023) con una granularidad trimestral. Este período es especialmente significativo, ya que incluye tanto el impacto de la crisis financiera global de 2008 como las fluctuaciones económicas subsiguientes, incluyendo la reciente pandemia de COVID-19. Durante el análisis vamos a descubrir la naturaleza de la serie y vamos a tratar de diseñar un modelo econométrico que prediga el índice del precio de la vivienda. Esto nos permitirá adelantarnos al mercado de bienes raices y saber el estado del mismo. En nuestro caso queremos ser capaces de realizar muy buenas predicciones a un cuatrimestre vista y a medio largo plazo.
+
+Debido a que vamos a cambiar ligeramente nuestra fuente de datos volvermos a realizar una análisis descriptivo para entender el comportamietno del mercado. Seguidamente, aplicaremos los análisis de series temporales aprendidos durante el curso y alguno extra para conseguir un modelo de predicción lo más exacto posible. Es posible que acabemos con dos modelos predictivos y que uno prediga bien a corto plazo y otro a medio plazo.
 
 ## Carga de datos
 
@@ -394,7 +396,7 @@ ggplot(df, aes(x = Periodo, y = Precio_vivienda)) +
 
 La línea continua representa la serie temporal del precio, evidenciando tres momentos críticos en el mercado inmobiliario español, marcados por líneas verticales punteadas y anotaciones explicativas.
 
-Primero, la línea roja punteada señala el año 2008, coincidiendo con el estallido de la burbuja inmobiliaria. Aquí, se observa un pico seguido de un descenso abrupto, reflejando la caída de precios post-crisis financiera. Este fenómeno marcó el comienzo de un periodo recesivo en el que los precios tocaron su punto más bajo en 2014.
+Primero, la línea roja punteada señala el año 2008, coincidiendo con el estallido de la burbuja inmobiliaria. Aquí, se observa un pico seguido de un descenso abrupto, reflejando la caída de precios post-crisis financiera. Este fenómeno marcó el comienzo de un periodo recesivo en el que los precios tocaron su punto más bajo el último trimestre de 2013.
 
 Posteriormente, la línea azul punteada 2014 sugieren un punto de inflexión donde se empieza a percibir una recuperación gradual de los precios. Esta tendencia ascendente indica un fortalecimiento del mercado que podría estar vinculado a mejoras en la economía española y un incremento en la demanda de vivienda.
 
@@ -404,9 +406,17 @@ Este análisis gráfico sirve como una herramienta esencial para comprender la d
 
 ## Modelado de series temporales
 
-Visto el comportamiento de los datos vamos a abordar el análisis desde dos perspectivas. En primera instancia vamos a tratar de crear un modelo que sea capaz de predecir el precio de la vivienda entrenandolo con todos los datos que tenemos a nuestra disposición. Para ello, vamos a emplear un modelo ARIMA y calcularemos los mejores parámetros con la función auto.arima de forecast.
+Visto el comportamiento de los datos vamos a abordar el análisis desde dos perspectivas. En primera instancia trateremos de crear un modelo que sea capaz de predecir el precio de la vivienda entrenandolo con todos los datos que tenemos a nuestra disposición. Esto podría ayudar a que nuesto modelo sepa adaptarse a cambios de tendencia. Para ello, vamos a emplear un modelo ARIMA y calcularemos los mejores parámetros con la función auto.arima de forecast.
 
-Por otra parte, trataremos de conseguir un modelo de predicción entrenandolo solo con los datos a partir de 2014, este modelo eliminará el sesgo provocado por la burbuja y puede que sea mejor para predicciones a medio plazo.
+Por otra parte, trataremos de conseguir un modelo de predicción entrenandolo solo con los datos a partir de 2014, este modelo eliminará el sesgo provocado por la burbuja y puede que sea mejor para predicciones a medio plazo. Para este modelo utilizaremos:
+
+-   Regresión lineal
+
+-   Regresión cuadrática
+
+-   Regresión exponencial cuadrática
+
+-   Modelos ARIMA
 
 ### Modelo con todos los datos
 
@@ -421,6 +431,10 @@ autoplot(df_completo.ts)
 ```
 
 Vamos a separar nuestros datos en entrenamiento y test para luego hacer la validación. Los datos test llegan hasta el primer trimestre de 2022.
+
+-   Datos test: [T1_2007 - T1_2022]
+
+-   Datos validación: [T2_2022 - T3_2023]
 
 ```{r}
 completo_train_ends = c(16,1)
@@ -439,7 +453,7 @@ df_completo.autoarima<-auto.arima(df_completo.ts.train)
 df_completo.autoarima
 ```
 
-A continuación, dado que no hemos visto en profundidad este tipo de modelo, añadimos la interpretación que ha hecho chat GPT-4 de los parametros resultantes.
+El modelo que nos devuelve la función auto.arima es:
 
 1.  **Especificación del Modelo ARIMA**: La serie se ha modelado con un ARIMA(2,2,0)(0,0,1)[4]. Esto significa que el modelo es un ARIMA estacional con:
 
@@ -527,11 +541,12 @@ bondad = function(real, comparacion, aprox) {
   # R-squared is 1 - (SSE/SST)
   r_squared <- 1 - (sse/sst)
   r_squared
-  
-  print(paste('MAE:', round(mae, 6)))
-  print(paste('MAPE:', round(mape, 6)))
-  print(paste('RMSE:', round(rmse, 6)))
-  print(paste('R^2:', round(r_squared, 6)))
+  cat('\n')
+  cat('MAE: ', round(mae, 6), '\n')
+  cat('MAPE:', round(mape, 6), '\n')
+  cat('RMSE:', round(rmse, 6), '\n')
+  cat('R^2*:', round(r_squared, 6), '\n')
+  cat('\n')
 }
 
 ultima_observacion_train = (completo_train_ends[1] -1) * 4 + completo_train_ends[2]
@@ -545,13 +560,13 @@ bondad(df_completo.ts.valid, df_completo.ts[ultima_observacion_train], df_comple
 
 3.  **RMSE: 8.428808** - La raíz del error cuadrático medio sugiere que las predicciones suelen estar a unas 8.43 unidades de distancia del valor real. Dado que el RMSE penaliza más los errores grandes, este valor nos indica que hay variabilidad en la precisión de las predicciones.
 
-4.  **R\^2: -0.871797** - Con la nueva definición, este R\^2 compara el modelo con una predicción ingenua. Aunque sigue siendo negativo, este valor indica que el modelo no está superando significativamente una predicción simple basada en la última observación. Esto puede ser una señal de que el modelo necesita mejoras, pero no necesariamente sugiere una inadecuación tan grave como lo haría un R\^2 negativo en el cálculo tradicional.
+4.  **R\^2\*: -0.871797** - Con la nueva definición, este R\^2 compara el modelo con una predicción ingenua. Este valor indica que el modelo no está superando una predicción simple basada en la última observación. Esto puede ser una señal de que el modelo necesita mejoras, pero no necesariamente sugiere una inadecuación tan grave como lo haría un R\^2 negativo en el cálculo tradicional.
 
 Por lo tanto, estos resultados sugieren la necesidad de una revisión y posible ajuste del modelo, o la exploración de enfoques alternativos que puedan manejar mejor la incertidumbre y los cambios en las tendencias a largo plazo. Visto que con todos los datos el modelo ARIMA para medio plazo no es recomendable pasamos a la predicción a corto plazo.
 
 #### Predicción a corto plazo
 
-Vamos ha crear un algoritmo que calcule a un trimestre vista y vaya reentrenando el modelo cada vez que le entra un dato nuevo. Esto tiene sentido porque, a pesar de estar asumiendo un coste computacional importante solo tenemos un dato por trimestre, por lo tanto nos lo podemos permitir. Pero, si que vamos a respetar el tipo de ARIMA sacado anteriormente (2, 2, 0) (0, 0, 1) [4].
+Vamos ha crear un algoritmo que calcule a un trimestre vista y vaya reentrenando el modelo cada vez que le entra un dato nuevo. Esto tiene sentido porque, a pesar de estar asumiendo un coste computacional importante solo tenemos un dato por trimestre, por lo tanto, nos lo podemos permitir. Pero, si que vamos a respetar el tipo de ARIMA sacado anteriormente (2, 2, 0) (0, 0, 1) [4].
 
 ```{r}
 # Creamos una función que calcula el modelo y hace la prediccón del siguiente trimestre al índicado.
@@ -598,23 +613,29 @@ bondad(df_completo.ts.valid, mean(df_completo.ts.valid), autoarima.pred_h1.ts)
 
 Al analizar la imagen del rendimiento de nuestro modelo, la línea roja que representa las predicciones de test muestra un ajuste razonable a los datos reales, aunque hay margen para mejorar. Los parámetros de desempeño del modelo son:
 
--   MAE (Error Absoluto Medio): 2.042988, que indica la diferencia media entre los valores predichos y los reales.
+-   **MAE: 2.042988**, que indica la diferencia media entre los valores predichos y los reales.
 
--   MAPE (Error Porcentual Absoluto Medio): 1.522266%, que refleja el porcentaje medio de error en las predicciones.
+-   **MAPE: 1.522266%**, que refleja el porcentaje medio de error en las predicciones.
 
--   RMSE (Raíz del Error Cuadrático Medio): 2.23927, proporcionando una medida de la calidad del modelo en cuanto a la variabilidad de los errores de predicción.
+-   **RMSE:** **2.23927**, proporcionando una medida de la calidad del modelo en cuanto a la variabilidad de los errores de predicción.
 
--   R\^2 (Coeficiente de Determinación): 0.333522, lo cual sugiere que nuestro modelo explica aproximadamente un 33.35% de variabilidad con respecto a un modelo ingenuo.
+-   **R\^2: 0.333522**, lo cual sugiere que nuestro modelo explica aproximadamente un 33.35% de variabilidad con respecto a un modelo ingenuo.
 
 Estos indicadores de desempeño nos muestran que, aunque las predicciones son generalmente cercanas a los valores reales, debemos trabajar en la mejora del modelo para aumentar la precisión y la capacidad explicativa del mismo.
 
 ### Modelo con los datos a partir de 2014
 
-Después de haber analizado modelos que incluyen el rango completo de datos históricos, ahora vamos a enfocarnos en los datos a partir de 2014. Esta fecha marca un hito significativo, ya que corresponde al punto más bajo en el precio de alquiler antes de observar una tendencia ascendente.
+Después de haber analizado modelos que incluyen el rango completo de datos históricos, ahora vamos a enfocarnos en los datos a partir de 2014. Esta fecha marca un hito significativo, ya que corresponde al siguiente trimetre después del punto más bajo en el precio de la vivienda.
 
 Al limitar nuestro análisis a este periodo de tiempo más reciente, esperamos no solo simplificar la complejidad del modelo sino también aumentar la precisión de nuestras predicciones al concentrarnos en un mercado inmobiliario que ha mostrado una dinámica distinta en comparación con el comportamiento previo a 2014. Este enfoque segmentado nos permitirá ajustar mejor nuestros modelos a las tendencias actuales.
 
 Continuamos con nuestro plantemiento de conseguir predicciones a medio y a corto plazo, pudiendo suponer dos modelos distintos.
+
+Dividimos los datos en:
+
+-   Datos test: [T1_2014 - T1_2022]
+
+-   Datos validación: [T2_2022 - T3_2023]
 
 ```{r}
 # Definimos ciertas variables genéricas de nuestro análisis
@@ -631,6 +652,8 @@ df_partido.ts<-ts(df_partido$Precio_vivienda, start=c(1,1), end=c(10,3), freq = 
 autoplot(df_partido.ts)
 ```
 
+Este gráfico representa los datos con los que vamos a trabajar para obtener los modelos.
+
 ```{r}
 df_partido.ts.train<-window(df_partido.ts,start = c(1,1), end = train_ends)
 df_partido.ts.valid<-window(df_partido.ts,start = valid_starts, end = valid_ends)
@@ -638,39 +661,45 @@ df_partido.ts.valid<-window(df_partido.ts,start = valid_starts, end = valid_ends
 
 #### Predicción a medio plazo
 
-En primer lugar ajustaremos una serie de funciones matemáticas que nos permitan modelar y entender la evolución del precio de la vivienda durante el periodo que comienza en 2014. Consideraremos tres tipos de modelos de regresión para capturar la naturaleza de los datos: lineal, cuadrático y exponencial cuadrático. Seguidamente, al igual que hicimos con todos los datos entrenaremos un modelo ARIMA para ver si es capaz de mejorar las predicciones de los modelos funcionales.
+En primer lugar ajustaremos una serie de funciones matemáticas que nos permitan modelar y entender la evolución del precio de la vivienda durante el periodo que comienza en 2014. Consideraremos tres tipos de modelos de regresión para capturar la naturaleza de los datos: lineal, cuadrático y exponencial cuadrático. Seguidamente, al igual que hicimos anteriormente entrenaremos un modelo ARIMA para ver si es capaz de mejorar las predicciones de los modelos funcionales.
 
 **Modelo Lineal**: Este será nuestro punto de partida, proporcionando una línea recta que representa la tendencia general de los precios de la vivienda con el tiempo. La simplicidad del modelo lineal lo hace útil para obtener una vista general y puede servir como una herramienta de comparación para modelos más complejos.
 
 ```{r}
 df_partido.lm<-tslm(df_partido.ts.train~trend)
-
-summary(dept.lm)
 ```
 
 ```{r}
-autoplot(cbind(df_partido.lm$fitted,df_partido.ts), xlab="Año", ylab="Indice precio vivienda")
+autoplot(cbind(df_partido.lm$fitted,df_partido.ts), xlab="Año", ylab="Indice precio vivienda") + labs(
+  title = "Regresión lineal",
+  subtitle = "Predicción datos test",
+)
+
+a = df_partido.lm.pred.valid <- forecast(df_partido.lm, h = length(df_partido.ts.valid))
+
+d = plotarimapred(df_partido.ts, df_partido.lm.pred.valid, xlim=c(1,valid_ends[1]+1), range.percent = 0.001)
+
+b = bondad(df_partido.ts.valid, mean(df_partido.ts.valid), df_partido.lm.pred.valid$mean)
 ```
 
-```{r}
-df_partido.lm.pred.valid <- forecast(df_partido.lm, h = length(df_partido.ts.valid))
+Al observar el primer gráfico, notamos que el modelo lineal ajustado, representado por la línea roja, intenta capturar la tendencia central de la serie temporal del índice de precios de la vivienda.
 
-plotarimapred(df_partido.ts, df_partido.lm.pred.valid, xlim=c(1,valid_ends[1]+1), range.percent = 0.001)
-```
+El segundo gráfico proporciona una visualización clara de las predicciones generadas por el modelo de regresión lineal, incluyendo intervalos de confianza para las proyecciones futuras, denotados por la banda sombreada. Este modelo extiende la línea de tendencia más allá del último punto de datos observado, y la banda de confianza se amplía a medida que nos alejamos de los datos conocidos, reflejando el aumento de la incertidumbre en las predicciones a futuro.
 
-```{r}
-bondad(df_partido.ts.valid, mean(df_partido.ts.valid), df_partido.lm.pred.valid$mean)
-```
+Las estadísticas de bondad de ajuste que se presentan no son buenos. Destacamos el R^2^\* negativos que indica que una predicción ingenua sería mejor.
+
+Aunque el modelo de regresión lineal proporciona una visión general y simplificada de la tendencia, no es adecuado para realizar predicciones precisas en nuestro contexto. La predicción ingenua, que se limita a proyectar el último valor conocido, resultaría en una menor variabilidad de los errores comparado con nuestro modelo lineal.
 
 **Modelo Cuadrático**: Ampliando el modelo lineal, el modelo cuadrático introducirá un término de segundo grado, permitiéndonos capturar no solo la tendencia, sino también la aceleración o desaceleración de los precios a lo largo del tiempo. Esto podría reflejar cambios en el mercado que no son evidentes en un ajuste lineal.
 
 ```{r}
 df_partido.lm2<-tslm(df_partido.ts.train~ I(trend^2) + trend)
 
-summary(df_partido.lm2)
-
 # Ajuste de datos entrenamiento
-autoplot(cbind(df_partido.lm2$fitted,df_partido.ts), xlab="Año", ylab="Indice precio vivienda")
+autoplot(cbind(df_partido.lm2$fitted,df_partido.ts), xlab="Año", ylab="Indice precio vivienda") + labs(
+  title = "Regresión cuadrática",
+  subtitle = "Predicción datos test",
+)
 
 # Ajuste datos de test
 df_partido.lm2.pred.valid <- forecast(df_partido.lm2, h = length(df_partido.ts.valid))
@@ -680,15 +709,18 @@ plotarimapred(df_partido.ts, df_partido.lm2.pred.valid, xlim=c(1,valid_ends[1]+1
 bondad(df_partido.ts.valid, mean(df_partido.ts.valid), df_partido.lm2.pred.valid$mean)
 ```
 
-**Modelo Exponencial Cuadrático**: Finalmente, el modelo exponencial cuadrático es considerablemente más complejo y nos ayudará a entender comportamientos no lineales en los datos. Esta función puede ser adecuada para modelar crecimientos que se aceleran a un ritmo no constante, lo que podría ocurrir en un mercado inmobiliario que experimenta cambios rápidos debido a factores económicos, demográficos o políticos.
+Para el modelo cuadrático, los estadísticos de bondad de ajuste han mejorado con respecto al modelo lineal, lo que sugiere una mayor precisión en la captura de la variabilidad de los precios de la vivienda. Sin embargo, aún se observa un R² ajustado negativo, aunque menos extremo que en el modelo lineal, lo que indica una mejora en la capacidad del modelo para capturar la variabilidad de los datos en comparación con un modelo ingenuo. La búsqueda de un modelo con un R² ajustado positivo y más cercano a 1 sería ideal, ya que indicaría una capacidad predictiva superior a la de un modelo ingenuo y una captura efectiva de la variabilidad de los datos.
+
+**Modelo Exponencial Cuadrático**: el modelo exponencial cuadrático es considerablemente más complejo y nos ayudará a entender comportamientos no lineales en los datos. Esta función puede ser adecuada para modelar crecimientos de tendencia multiplicativa.
 
 ```{r}
 df_partido.exp<-tslm(df_partido.ts.train~I(trend^2) + trend, lambda = 0)
 
-summary(df_partido.exp)
-
 # Ajuste de datos entrenamiento
-autoplot(cbind(df_partido.exp$fitted,df_partido.ts), xlab="Año", ylab="Indice precio vivienda")
+autoplot(cbind(df_partido.exp$fitted,df_partido.ts), xlab="Año", ylab="Indice precio vivienda") + labs(
+  title = "Regresión exponencial Cuadrática",
+  subtitle = "Predicción datos test",
+)
 
 # Ajuste datos de test
 df_partido.exp.pred.valid <- forecast(df_partido.exp, h = length(df_partido.ts.valid))
@@ -698,15 +730,21 @@ plotarimapred(df_partido.ts, df_partido.exp.pred.valid, xlim=c(1,valid_ends[1]+1
 bondad(df_partido.ts.valid, mean(df_partido.ts.valid), df_partido.exp.pred.valid$mean)
 ```
 
-**Modelo ARIMA**
+Con el modelo exponencial cuadrático, los estadísticos de bondad de ajuste muestran una mejora notable en comparación con los modelos lineal y cuadrático previamente analizados. Aunque el R² ajustado sigue siendo negativo, está considerablemente más cerca de cero, lo que indica una reducción en la brecha de rendimiento con respecto a un modelo ingenuo.
+
+**Modelo ARIMA:** Avanzando en la complejidad de nuestros modelos econométricos, nos proponemos desarrollar un modelo ARIMA, que se adapta específicamente para analizar y prever series temporales. Para determinar la configuración óptima de los parámetros del modelo ARIMA, emplearemos la función auto.arima. Esta herramienta realiza una búsqueda exhaustiva a través de diferentes combinaciones de parámetros
 
 ```{r}
 df_partido.autoarima<-auto.arima(df_partido.ts.train)
 
+print("ARIMA resultante:")
 df_partido.autoarima
 
 # Ajuste de datos entrenamiento
-autoplot(cbind(df_partido.autoarima$fitted,df_partido.ts), xlab="Año", ylab="Indice precio vivienda")
+autoplot(cbind(df_partido.autoarima$fitted,df_partido.ts), xlab="Año", ylab="Indice precio vivienda") + labs(
+  title = "ARIMA (0,1,0)",
+  subtitle = "Predicción datos test",
+)
 
 # Ajuste datos de test
 df_partido.autoarima.pred.valid <- forecast(df_partido.autoarima, h = length(df_partido.ts.valid))
@@ -716,9 +754,15 @@ plotarimapred(df_partido.ts, df_partido.autoarima.pred.valid, xlim=c(1,valid_end
 bondad(df_partido.ts.valid, mean(df_partido.ts.valid), df_partido.autoarima.pred.valid$mean)
 ```
 
+El modelo ARIMA(0,1,0) con deriva proporciona una aproximación simplificada pero potente para modelar la serie temporal del índice de precios de la vivienda en la Comunidad Valenciana. La ausencia de términos autoregresivos (AR) y de medias móviles (MA) indica que el modelo se basa puramente en la diferenciación de los datos (I=1) para lograr la estacionariedad y un término de deriva para captar la tendencia. El coeficiente de deriva de 1.0160 sugiere una tendencia constante en el tiempo, y su error estándar de 0.2045 muestra que este coeficiente es estadísticamente significativo. Este modelo proporciona un enfoque sólido y mucho mejor que los otros modelos para la predicción del índice de precios de la vivienda. Cabe resaltar que el R^2^\* del modelo es el único que es superior a 0, por lo tanto, hemos conseguido superar al modelo ingenuo.
+
+Así pues, es obvio que el mejor modelo de esta sección es el ARIMA (0, 1, 0), por lo tanto, nos quedaremos con ese como mejor representante de los modelos a medio plazo con todos los datos.
+
 #### Predicciones a corto plazo
 
-Ahora vamos a ver como se comporta este modelo para predecir a un trimestre vista con una regresión cuadrática.
+Una vez tenemos los modelos vamos a comprobar como se comportan en la predicción a corto plazo. Para ello utilizaremos el algoritmo planteado en el modelo con todos los datos y comprobaremos las predicciones que nos devuelven los modelos anteriores desechando el lineal, ya que, no captura bien la naturaleza de los datos.
+
+**Modelo cuadrático**
 
 ```{r}
 cuad_pred1 = function(ts, trimestre) {
@@ -735,17 +779,22 @@ cuad.pred_h1.ts = ts(cuad.pred_h1$Point.Forecast, start = valid_starts, end = va
 
 # Ajuste de datos entrenamiento
 autoplot(cbind(df_partido.lm2$fitted.values,df_partido.ts, cuad.pred_h1.ts), xlab="Año", ylab="Indice precio vivienda") +
-  scale_color_manual(values = c("#E8943A", "#566B8A", "#E34836"))
+  scale_color_manual(values = c("#E8943A", "#566B8A", "#E34836"))  + labs(
+  title = "Modelo cuadrático",
+  subtitle = "Predicción a un trimestre vista",
+)
 
 bondad(df_partido.ts.valid, mean(df_partido.ts.valid), cuad.pred_h1.ts)
 ```
 
-Exponencial cuadrática
+Con el modelo cuadrático observamos en la gráfica que las predicciones siguen de cerca la serie temporal del índice de precios de la vivienda. La línea roja representa las predicciones generadas por el modelo y podemos apreciar que se alinea estrechamente con la serie real, indicada por la línea azul. Los estadísticos de bondad del modelo revelan un desempeño notablemente bueno en la predicción a corto plazo.
+
+**Modelo exponencial cuadrático**
 
 ```{r}
 exp_pred1 = function(ts, trimestre) {
   df_partido.ts.train = window(df_partido.ts,start=c(1,1),end=trimestre)
-  df_partido.lm2 = tslm(df_partido.ts.train~ I(trend^2) + trend, lambda = 0)
+  df_partido.lm2 = tslm(df_partido.ts.train~I(trend^2) + trend, lambda = 0)
   pred = forecast(df_partido.lm2, h = 1)
   pred
 }
@@ -756,12 +805,17 @@ exp.pred_h1.ts = ts(exp.pred_h1$Point.Forecast, start = valid_starts, end = vali
 
 # Ajuste de datos entrenamiento
 autoplot(cbind(df_partido.lm2$fitted.values,df_partido.ts, exp.pred_h1.ts), xlab="Año", ylab="Indice precio vivienda") +
-  scale_color_manual(values = c("#E8943A", "#566B8A", "#E34836"))
+  scale_color_manual(values = c("#E8943A", "#566B8A", "#E34836")) + labs(
+  title = "Modelo exponencial cuadrático",
+  subtitle = "Predicción a un trimestre vista",
+)
 
 bondad(df_partido.ts.valid, mean(df_partido.ts.valid), exp.pred_h1.ts)
 ```
 
-Arima:
+Para el modelo exponencial al igual que pasaba con las predicciones a medio plazo todos los parámetros son mejores que el modelo cuadrático.
+
+**Arima (0,1,0):**
 
 ```{r}
 arima2_pred1 = function(ts, trimestre) {
@@ -777,9 +831,62 @@ exp.pred_h1.ts = ts(exp.pred_h1$Point.Forecast, start = valid_starts, end = vali
 
 # Ajuste de datos entrenamiento
 autoplot(cbind(df_partido.autoarima$fitted, df_partido.ts, exp.pred_h1.ts), xlab="Año", ylab="Indice precio vivienda") +
-  scale_color_manual(values = c("#E8943A", "#566B8A", "#E34836"))
+  scale_color_manual(values = c("#E8943A", "#566B8A", "#E34836")) + labs(
+  title = "Modelo ARIMA (0,1,0)",
+  subtitle = "Predicción a un trimestre vista",
+)
 
-bondad(df_partido.ts.valid, mean(df_partido.ts.valid), exp.pred_h1.ts)/
+bondad(df_partido.ts.valid, mean(df_partido.ts.valid), exp.pred_h1.ts)
 ```
 
+A diferencia de las predicciones a medio plazo, en este caso, el modelo ARIMA se comporta peor que el modelo exponencial. Esta diferencia, además de verse en el valor de los parametros de bondad, se aprecia en las gráficas. El modelo ARIMA se ve más afectado por el sobreajuste de entrenarlo con todos los datos disponibles. En cambio, las predicciones del otro modelo son más constantes ya que siguen una forma clara.
+
 ## Elección de modelos
+
+Tras probar diversos modelos y analizar los gráficos resultantes tenemos un representante de cada apartado.
+
+| Tipo de predicción  | Datos de entrenamiento | Modelo                        |
+|-------------------|----------------------|-------------------------------|
+| Un trimestre vista: | Todos los datos        | ARIMA(2,2,0)(0,0,1)[4]        |
+|                     | A partir de 2014       | Modelo exponencial cuadrático |
+| Medio plazo:        | Todos los datos        | ARIMA(2,2,0)(0,0,1)[4]        |
+|                     | A partir de 2014       | ARIMA(0,1,0)                  |
+
+Primeramente elegimos nuestro modelo de predicción a un trimestre vista.
+
+```{r fig.width=10, fig.height=8}
+# ARIMA
+cat("Parámetros de bondad del modelo ARIMA (2,2,0)(0,0,1)[4] con todos los datos:")
+bondad(df_completo.ts.valid, mean(df_completo.ts.valid), autoarima.pred_h1.ts) 
+
+# Exponencial
+cat("Parámetros de bondad del modelo Exponencial Cuadrático con los datos parciales:")
+bondad(df_partido.ts.valid, mean(df_partido.ts.valid), exp.pred_h1.ts)
+
+```
+
+El modelo exponencial cuadrático muestra un **MAE** y **MAPE** más bajos, lo que indica que, en promedio, sus predicciones son más cercanas a los valores reales y el error porcentual es menor. Sin embargo, el **RMSE** es ligeramente mayor en comparación con el modelo ARIMA, lo que sugiere que puede haber algunas predicciones que se desvíen más de los valores reales.
+
+En cuanto al **R²**, el modelo ARIMA tiene un valor ligeramente superior, lo que significa que es capaz de explicar una mayor proporción de la variabilidad de los datos en comparación con el modelo exponencial cuadrático.
+
+Al tomar una decisión entre los dos, se debe considerar el contexto específico de la aplicación de estos modelos. Si se valora más la proximidad de las predicciones a los valores reales (menor error medio), el modelo exponencial cuadrático podría ser preferible. Sin embargo, si se busca un modelo que explique una mayor proporción de la variabilidad de los datos y, posiblemente, sea más estable ante variaciones más amplias, el modelo ARIMA podría ser más adecuado.
+
+Dado que la diferencia en el **R²** entre los dos modelos es relativamente pequeña y el modelo exponencial cuadrático presenta mejores **MAE** y **MAPE**, este último parece ser una opción ligeramente mejor para la predicción a un trimestre vista.
+
+Los modelos predictivos a medio plazo presentan los siguientes parámetros de bondad:
+
+```{r}
+cat("Parámetros de bondad del modelo ARIMA (2,2,0)(0,0,1)[4] con todos los datos")
+bondad(df_completo.ts.valid, df_completo.ts[ultima_observacion_train], df_completo.autoarima.pred.valid$mean)
+
+cat("Parámetros de bondad del modelo ARIMA (0,1,0) con los datos parciales")
+bondad(df_partido.ts.valid, mean(df_partido.ts.valid), df_partido.autoarima.pred.valid$mean)
+```
+
+La elección de un modelo para predicciones a medio plazo implica considerar la consistencia y la precisión de las predicciones a lo largo de un período más extenso.
+
+Al comparar estos parámetros, el modelo ARIMA (0,1,0) supera claramente al ARIMA (2,2,0)(0,0,1)[4] en todos los aspectos. Presenta un **MAE**, **MAPE** y **RMSE** significativamente más bajos, lo que indica que sus predicciones son, en promedio, mucho más cercanas a los valores reales y presentan una menor variabilidad de los errores. Además, el **R²** positivo del modelo ARIMA (0,1,0) contrasta fuertemente con el valor negativo del ARIMA (2,2,0)(0,0,1)[4], lo que sugiere que el primero tiene una capacidad predictiva mucho más fuerte.
+
+Sin embargo, cabe resaltar que el modelo entrenado con parte de los datos no estaría preparado para un cambio de tendencia alcista a bajista. Por lo tanto, sería imprescindible tener en cuenta noticias y eventos macroeconómicos, políticos y sociales para valorar la fiabilidad de nuestra predicción. Ante un escenario de previsible estancamiento y posterior caida del mercado inmobiliaría nuestro modelo es probable que no se adaptara correctamente. En cuyo caso es posible que el ARIMA entrenado con todos los datos diera mejores aproximaciones.
+
+## Conclusiones
